--- a/package.json
+++ b/package.json
@@ -3,30 +3,29 @@
   "description": "Gupshup API client",
   "version": "0.1.8",
   "main": "dist/index",
-  "types": "types/index.d.ts",
+  "types": "dist/index.d.ts",
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.7.0",
     "axios-logger": "^2.8.0",
-    "qs": "^6.12.0"
+    "qs": "^6.12.1"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/qs": "^6.9.12",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@types/qs": "^6.9.15",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
     "eslint": "^8.57.0",
     "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "typedoc": "^0.25.12",
-    "typescript": "^5.4.2"
+    "typedoc": "^0.25.13",
+    "typescript": "^5.4.5"
   },
   "scripts": {
     "test": "jest",
-    "build": "tsc & npm run types:build",
+    "build": "tsc",
     "lint-fix": "eslint --fix . --ext .ts",
     "docs:build": "npx typedoc",
-    "docs:view": "http-server ./docs/",
-    "types:build": "npx tsc src/*.ts --declaration --allowJs --emitDeclarationOnly --outDir types"
+    "docs:view": "http-server ./docs/"
   }
 }
