--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^1.8.1",
     "axios-logger": "^2.8.1",
+    "form-data": "^4.0.3",
     "qs": "^6.14.0"
   },
   "devDependencies": {
