--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8.57.1",
-    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6",
     "typedoc": "^0.27.9",
@@ -24,10 +23,10 @@
   },
   "scripts": {
     "test": "jest",
-    "build": "tsc && npm run docs:build",
+    "build": "tsc",
     "lint-fix": "eslint --fix . --ext .ts",
     "docs:build": "npx typedoc",
-    "docs:view": "http-server ./docs/",
+    "docs:view": "npx typedoc --watch",
     "test:workflow": "./scripts/test-workflow.sh"
   }
 }
