--- a/.github/workflows/docs-manual.yml
+++ b/.github/workflows/docs-manual.yml
@@ -1,5 +1,10 @@
 name: Build Documentation (Manual)
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 on:
   workflow_dispatch:
     inputs:
