--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,8 +4,6 @@ permissions:
   contents: read
   pages: write
   id-token: write
-  actions: read
-  security-events: write
 
 on:
   push:
@@ -21,8 +19,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -43,24 +39,12 @@ jobs:
         path: docs/
         retention-days: 30
         
-    - name: Deploy to GitHub Pages (using GITHUB_TOKEN)
+    - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs
         force_orphan: true
-        cname: ''
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
-    - name: Deploy to GitHub Pages (using ORG_TOKEN - fallback)
-      if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') && secrets.ORG_TOKEN
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.ORG_TOKEN }}
-        publish_dir: ./docs
-        force_orphan: true
-        cname: ''
-      env:
-        GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
+
